# plezy

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .swift-format  CONTRIBUTING.md  README.md  analysis_options.yaml  build.yaml  pubspec.yaml  reinstall_ipad.sh  slang.yaml
.githooks/: pre-commit
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml  release.yml  update-packages.yml
Casks/: plezy.rb
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  dovi_bridge.cpp
android/app/src/main/cpp/include/libdovi/: rpu_parser.h
android/fastlane/: Fastfile  Pluginfile
android/libass/: build.gradle.kts  consumer-rules.pro
android/libass/src/main/cpp/: AssKt.c  CMakeLists.txt
ios/: Podfile
ios/Runner/: AppDelegate.swift  File.txt  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/fastlane/: Fastfile
ios/plezy.icon/: icon.json
lib/: main.dart
lib/connection/: connection.dart  connection_auth_service.dart  connection_bootstrap.dart  connection_registry.dart
lib/media/: ids.dart  (+39 more)
linux/: CMakeLists.txt
scripts/: ci_checks.sh  clean_translations.py  codegen.sh  format_native.sh  generate_android_icons.sh  generate_ducet_ranks.dart  release.sh  setup_hooks.sh  upload-symbols.ps1  upload-symbols.sh
server/: Caddyfile  Dockerfile  docker-compose.yml  go.mod  main.go  main_test.go  oauth.go  oauth_test.go
tvos/: .gitignore  Podfile  engine.version
website/: README.md  package.json
(+1037 files in other folders)
